k8s/concepts/ingress/ingressMultiDomain.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: foo.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: foo-service
                port:
                  number: 80

    - host: bar.example.com
      http:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: bar-service
              port:
                number: 80
